Fix views exposed form element wrapping.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -165,6 +165,8 @@ div#toolbar div.toolbar-shortcuts ul {
 
   .views-exposed-widgets {
     padding: 10px;
+    display: flex;
+    flex-flow: row wrap;
   }
 
   .actions {
